--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url("/lesson9/images/patt.png");
+    background-image: url("./images/patt.png");
 }
 .container {
     width: 1200px;
@@ -15,6 +15,9 @@ body {
 .header {
     background-color: rgba(255, 255, 255, 0.75);
     padding: 25px 0;
+    height: 100px;
+    min-width: 1200px;
+    
 }
 
 .row {
@@ -28,20 +31,18 @@ body {
     clear: both;
 }
 
-
 [class*="col-"] {
     float: left;
     padding-left: 15px;
     padding-right: 15px;
+    height: 100px;
 }
-
-
 
 .col-1 {
     width: 8.33333%;
 }
 .col-2 {
-    width: 16.66667;
+    width: 16.66667%;
 }
 .col-3 {
     width: 25%;
@@ -49,22 +50,27 @@ body {
 
 .col-6 {
     width: 50%;
+    
 }
-
+.col-9 {
+    width: 75%;
+    padding-top: 11px;
+}
 .col-12 {
     width: 100%;
 }
 
-.menu li {
+.menu>li {
     float: left;
     width: 25%;
     border-left: 1px solid #2c71b8;
+    
+    
 }
 
-.menu li:last-child {
+.menu > li:last-child {
     border-right: 1px solid #2c71b8;
 }
-
 
 
 .menu a{
@@ -75,9 +81,109 @@ body {
     text-decoration:none;
     color: #2c71b8;
     font-size: 21px;
- }
+}
 
 .menu a:hover {
     background-color: #2c71b8;
+    color: white;    
+}
+
+
+
+.search-button {
+    float: right;
+    width: 30px;
+    height: 30px;
+    background-image: url("./images/search.png");
+    background-size: contain;
+    display: inline-block;
+    background-color:#2c71b8;
+}
+
+.search-input {
+    display: inline-block;
+    width: 160px;
+    height: 30px;
+    line-height: 50px;
+}
+
+.basket-button {
+    float: right;
+    width: 40px;
+    height: 40px;
+    background-image: url("./images/basket.png");
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    position: relative;
+}
+.basket-button::before {
+    content:"4";
+    display: block;
+    clear: both;
+    border-radius: 50%;
+    background-color:#2c71b8;
+    width: 15px;
+    height: 15px;
+    top: -10px;
+    left: -8px;
+    position: absolute;
+}
+
+.submenu a {
+height:40px;
+width: 285px;
+line-height: 35px;
+text-decoration:none;
+color: white;
+font-size: 21px;
+background-color: #2c71b8;
+text-align: left;
+padding-left: 30px;
+}
+
+.submenu a:hover {
+    background-color: white;
+    color:#2c71b8;
+    padding-left: 30px;
+}
+
+
+.menu {
+    position: relative;
+     
+}
+
+.submenu {
+    position:absolute;
+    display: none;
+    z-index: 10;
+    
+}
+    
+.arrow {
+    border: solid #2c71b8;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    transform: rotate(45deg);
+    top: 20px;    
+}
+    
+li:hover .submenu {
+    display: block;
+}
+
+li {
+    position: relative;
+}
+li:hover >a {
+    background: #2c71b8;
     color: white;
+}
+li:hover > a > .arrow  {
+    border: solid white;
+    border-width: 0 2px 2px 0;
 }
