--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     float: left;
     padding-left: 15px;
     padding-right: 15px;
-    height: 100px;
+    
 }
 
 .col-1 {
@@ -54,7 +54,7 @@ body {
 }
 .col-9 {
     width: 75%;
-    padding-top: 11px;
+      
 }
 .col-12 {
     width: 100%;
@@ -86,6 +86,7 @@ body {
 .menu a:hover {
     background-color: #2c71b8;
     color: white;    
+    
 }
 
 
@@ -94,18 +95,38 @@ body {
     float: right;
     width: 30px;
     height: 30px;
-    background-image: url("./images/search.png");
+    background-image: url("./images/searchBlue.png");
     background-size: contain;
     display: inline-block;
     background-color:#2c71b8;
+    border: #2c71b8;
+    position: absolute;    
+    z-index: 10;
+    top: 32px;
+    right: 45px;    
 }
 
 .search-input {
     display: inline-block;
-    width: 160px;
-    height: 30px;
+    width: 200px;
+    height: 40px;
     line-height: 50px;
+    border-color: #2c71b8;
+    padding: 20px;
+    position: relative;
 }
+::-webkit-input-placeholder { /* webkit browsers */ color: #2c71b8;
+    font-size: 21px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.search-input {
+    text-decoration-color: #2c71b8;
+    text-align: 50px; 
+}
+
+
+
 
 .basket-button {
     float: right;
@@ -115,7 +136,7 @@ body {
     display: inline-block;
     background-repeat: no-repeat;
     background-position: center;
-    border: none;
+    border: white;
     position: relative;
 }
 .basket-button::before {
@@ -138,9 +159,10 @@ line-height: 35px;
 text-decoration:none;
 color: white;
 font-size: 21px;
-background-color: #2c71b8;
+background-color: #2c71b8; 
 text-align: left;
-padding-left: 30px;
+padding-left: 19px;
+
 }
 
 .submenu a:hover {
@@ -169,7 +191,8 @@ padding-left: 30px;
     width: 8px;
     height: 8px;
     transform: rotate(45deg);
-    top: 20px;    
+    top: 20px;       
+    margin-left: 10px;
 }
     
 li:hover .submenu {
